[package]
name = "event_rust"
version = "0.1.0"
license       = "MIT"
description   = "Lightweight non-blocking IO"
authors = ["tickbh <dwhat@vip.qq.com>"]
homepage      = "https://github.com/carllerche/mio"
repository    = "https://github.com/carllerche/mio"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]

[dependencies]
libc = "*"
num = "*"
time = "0.1.31"
bitflags = "0.3"

[[test]]
name = "test"
path = "test/test.rs"